<resources>
    <string name="app_name">My Application</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="lab1_1">Lab1: Linear Layouts</string>
    <string name="image1">Image</string>
    <string name="button1">Touch It</string>
    <string name="logo">Logotype Google</string>
    <string name="type_email">Type email</string>
    <string name="type_password">Type password</string>
</resources>