<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/margin"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:hint="@string/type_email"
        android:gravity="start"
        android:textColorHint="@color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:autofillHints="password"
        android:gravity="start"
        android:hint="@string/type_password"
        android:inputType="textPassword"
        android:textColorHint="@color/black" />

</LinearLayout>